[project]
name = "chatbot-with-llama3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-groq>=0.2.4",
    "pypdf>=5.3.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
    "youtube-transcript-api>=0.6.3",
]
